# travelers-toolkit

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  application.cpp  application.h  binary_stream.cpp  binary_stream.h  scene_renderer.cpp  scene_renderer.h  shader.h
.github/workflows/: cmake-multi-platform.yml
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
math/: mat4x4.cpp  mat4x4.h  vec2.h  vec3.cpp  vec3.h  vec4.cpp
nu/: geometry_definition.h  geometry_part.cpp  geometry_part.h  geometry_primitive.cpp  geometry_primitive.h  instance.cpp  instance.h  material.cpp  material.h  scene.cpp  scene.h  texture.cpp  texture.h  vertex.cpp
src/: application.cpp  binary_stream.h  main.cpp  scene_renderer.h  shader.cpp
src/math/: mat4x4.cpp  mat4x4.h  vec2.cpp  vec3.cpp  vec4.h
src/nu/: executable.h  geometry_definition.cpp  geometry_definition.h  material.cpp  material.h  scene.cpp  scene.h  texture.h  vertex.cpp  vertex.h
